# dbf2sql

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.ini.example  pyproject.toml
data/: ARTI.DBF  PROVE.DBF  RUBROS.DBF  SUBRUB.DBF
dbf2sql/: __init__.py  constants.py  main.py
dbf2sql/config/: settings.py
dbf2sql/utils/: colors.py
tests/: test_main.py
